// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shebang '#! /bin/sed -f' => sed 1`] = `
Object {
  "argv": "-f",
  "bin": "/bin/sed",
  "script": "sed",
  "shebang": "#! /bin/sed -f",
}
`;

exports[`shebang '#! /bin/sed -f' => sed 2`] = `""`;

exports[`shebang '#! /bin/sed -f\\n\\n' => sed 1`] = `
Object {
  "argv": "-f",
  "bin": "/bin/sed",
  "script": "sed",
  "shebang": "#! /bin/sed -f",
}
`;

exports[`shebang '#! /bin/sed -f\\n\\n' => sed 2`] = `
"

"
`;

exports[`shebang '#! /bin/sh' => sh 1`] = `
Object {
  "argv": "",
  "bin": "/bin/sh",
  "script": "sh",
  "shebang": "#! /bin/sh",
}
`;

exports[`shebang '#! /bin/sh' => sh 2`] = `""`;

exports[`shebang '#! /bin/sh\\n\\n' => sh 1`] = `
Object {
  "argv": "",
  "bin": "/bin/sh",
  "script": "sh",
  "shebang": "#! /bin/sh",
}
`;

exports[`shebang '#! /bin/sh\\n\\n' => sh 2`] = `
"

"
`;

exports[`shebang '#! /usr/awk -f' => awk 1`] = `
Object {
  "argv": "-f",
  "bin": "/usr/awk",
  "script": "awk",
  "shebang": "#! /usr/awk -f",
}
`;

exports[`shebang '#! /usr/awk -f' => awk 2`] = `""`;

exports[`shebang '#! /usr/awk -f\\n\\n' => awk 1`] = `
Object {
  "argv": "-f",
  "bin": "/usr/awk",
  "script": "awk",
  "shebang": "#! /usr/awk -f",
}
`;

exports[`shebang '#! /usr/awk -f\\n\\n' => awk 2`] = `
"

"
`;

exports[`shebang '#! /usr/bin/env node' => node 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/env",
  "script": "node",
  "shebang": "#! /usr/bin/env node",
}
`;

exports[`shebang '#! /usr/bin/env node' => node 2`] = `""`;

exports[`shebang '#! /usr/bin/env node\\n\\n' => node 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/env",
  "script": "node",
  "shebang": "#! /usr/bin/env node",
}
`;

exports[`shebang '#! /usr/bin/env node\\n\\n' => node 2`] = `
"

"
`;

exports[`shebang '#! /usr/bin/env python -c' => python 1`] = `
Object {
  "argv": "-c",
  "bin": "/usr/bin/env",
  "script": "python",
  "shebang": "#! /usr/bin/env python -c",
}
`;

exports[`shebang '#! /usr/bin/env python -c' => python 2`] = `""`;

exports[`shebang '#! /usr/bin/env python -c\\n\\n' => python 1`] = `
Object {
  "argv": "-c",
  "bin": "/usr/bin/env",
  "script": "python",
  "shebang": "#! /usr/bin/env python -c",
}
`;

exports[`shebang '#! /usr/bin/env python -c\\n\\n' => python 2`] = `
"

"
`;

exports[`shebang '#! /usr/bin/php' => php 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/php",
  "script": "php",
  "shebang": "#! /usr/bin/php",
}
`;

exports[`shebang '#! /usr/bin/php' => php 2`] = `""`;

exports[`shebang '#! /usr/bin/php\\n\\n' => php 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/php",
  "script": "php",
  "shebang": "#! /usr/bin/php",
}
`;

exports[`shebang '#! /usr/bin/php\\n\\n' => php 2`] = `
"

"
`;

exports[`shebang '#! /usr/bin/php5' => php5 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/php5",
  "script": "php5",
  "shebang": "#! /usr/bin/php5",
}
`;

exports[`shebang '#! /usr/bin/php5' => php5 2`] = `""`;

exports[`shebang '#! /usr/bin/php5\\n\\n' => php5 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/php5",
  "script": "php5",
  "shebang": "#! /usr/bin/php5",
}
`;

exports[`shebang '#! /usr/bin/php5\\n\\n' => php5 2`] = `
"

"
`;

exports[`shebang '#! /usr/bin/ruby' => ruby 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/ruby",
  "script": "ruby",
  "shebang": "#! /usr/bin/ruby",
}
`;

exports[`shebang '#! /usr/bin/ruby' => ruby 2`] = `""`;

exports[`shebang '#! /usr/bin/ruby\\n\\n' => ruby 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/ruby",
  "script": "ruby",
  "shebang": "#! /usr/bin/ruby",
}
`;

exports[`shebang '#! /usr/bin/ruby\\n\\n' => ruby 2`] = `
"

"
`;

exports[`shebang '#!/bin/sed -f' => sed 1`] = `
Object {
  "argv": "-f",
  "bin": "/bin/sed",
  "script": "sed",
  "shebang": "#!/bin/sed -f",
}
`;

exports[`shebang '#!/bin/sed -f' => sed 2`] = `""`;

exports[`shebang '#!/bin/sed -f\\n\\n' => sed 1`] = `
Object {
  "argv": "-f",
  "bin": "/bin/sed",
  "script": "sed",
  "shebang": "#!/bin/sed -f",
}
`;

exports[`shebang '#!/bin/sed -f\\n\\n' => sed 2`] = `
"

"
`;

exports[`shebang '#!/bin/sh' => sh 1`] = `
Object {
  "argv": "",
  "bin": "/bin/sh",
  "script": "sh",
  "shebang": "#!/bin/sh",
}
`;

exports[`shebang '#!/bin/sh' => sh 2`] = `""`;

exports[`shebang '#!/bin/sh\\n\\n' => sh 1`] = `
Object {
  "argv": "",
  "bin": "/bin/sh",
  "script": "sh",
  "shebang": "#!/bin/sh",
}
`;

exports[`shebang '#!/bin/sh\\n\\n' => sh 2`] = `
"

"
`;

exports[`shebang '#!/usr/awk -f' => awk 1`] = `
Object {
  "argv": "-f",
  "bin": "/usr/awk",
  "script": "awk",
  "shebang": "#!/usr/awk -f",
}
`;

exports[`shebang '#!/usr/awk -f' => awk 2`] = `""`;

exports[`shebang '#!/usr/awk -f\\n\\n' => awk 1`] = `
Object {
  "argv": "-f",
  "bin": "/usr/awk",
  "script": "awk",
  "shebang": "#!/usr/awk -f",
}
`;

exports[`shebang '#!/usr/awk -f\\n\\n' => awk 2`] = `
"

"
`;

exports[`shebang '#!/usr/bin/env node' => node 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/env",
  "script": "node",
  "shebang": "#!/usr/bin/env node",
}
`;

exports[`shebang '#!/usr/bin/env node' => node 2`] = `""`;

exports[`shebang '#!/usr/bin/env node\\n\\n' => node 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/env",
  "script": "node",
  "shebang": "#!/usr/bin/env node",
}
`;

exports[`shebang '#!/usr/bin/env node\\n\\n' => node 2`] = `
"

"
`;

exports[`shebang '#!/usr/bin/env python -c' => python 1`] = `
Object {
  "argv": "-c",
  "bin": "/usr/bin/env",
  "script": "python",
  "shebang": "#!/usr/bin/env python -c",
}
`;

exports[`shebang '#!/usr/bin/env python -c' => python 2`] = `""`;

exports[`shebang '#!/usr/bin/env python -c\\n\\n' => python 1`] = `
Object {
  "argv": "-c",
  "bin": "/usr/bin/env",
  "script": "python",
  "shebang": "#!/usr/bin/env python -c",
}
`;

exports[`shebang '#!/usr/bin/env python -c\\n\\n' => python 2`] = `
"

"
`;

exports[`shebang '#!/usr/bin/php' => php 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/php",
  "script": "php",
  "shebang": "#!/usr/bin/php",
}
`;

exports[`shebang '#!/usr/bin/php' => php 2`] = `""`;

exports[`shebang '#!/usr/bin/php\\n\\n' => php 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/php",
  "script": "php",
  "shebang": "#!/usr/bin/php",
}
`;

exports[`shebang '#!/usr/bin/php\\n\\n' => php 2`] = `
"

"
`;

exports[`shebang '#!/usr/bin/php5' => php5 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/php5",
  "script": "php5",
  "shebang": "#!/usr/bin/php5",
}
`;

exports[`shebang '#!/usr/bin/php5' => php5 2`] = `""`;

exports[`shebang '#!/usr/bin/php5\\n\\n' => php5 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/php5",
  "script": "php5",
  "shebang": "#!/usr/bin/php5",
}
`;

exports[`shebang '#!/usr/bin/php5\\n\\n' => php5 2`] = `
"

"
`;

exports[`shebang '#!/usr/bin/ruby' => ruby 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/ruby",
  "script": "ruby",
  "shebang": "#!/usr/bin/ruby",
}
`;

exports[`shebang '#!/usr/bin/ruby' => ruby 2`] = `""`;

exports[`shebang '#!/usr/bin/ruby\\n\\n' => ruby 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/ruby",
  "script": "ruby",
  "shebang": "#!/usr/bin/ruby",
}
`;

exports[`shebang '#!/usr/bin/ruby\\n\\n' => ruby 2`] = `
"

"
`;

exports[`shebang '\\n\\n#! /bin/sed -f' => sed 1`] = `
Object {
  "argv": "-f",
  "bin": "/bin/sed",
  "script": "sed",
  "shebang": "

#! /bin/sed -f",
}
`;

exports[`shebang '\\n\\n#! /bin/sed -f' => sed 2`] = `""`;

exports[`shebang '\\n\\n#! /bin/sed -f\\n\\n' => sed 1`] = `
Object {
  "argv": "-f",
  "bin": "/bin/sed",
  "script": "sed",
  "shebang": "

#! /bin/sed -f",
}
`;

exports[`shebang '\\n\\n#! /bin/sed -f\\n\\n' => sed 2`] = `
"

"
`;

exports[`shebang '\\n\\n#! /bin/sh' => sh 1`] = `
Object {
  "argv": "",
  "bin": "/bin/sh",
  "script": "sh",
  "shebang": "

#! /bin/sh",
}
`;

exports[`shebang '\\n\\n#! /bin/sh' => sh 2`] = `""`;

exports[`shebang '\\n\\n#! /bin/sh\\n\\n' => sh 1`] = `
Object {
  "argv": "",
  "bin": "/bin/sh",
  "script": "sh",
  "shebang": "

#! /bin/sh",
}
`;

exports[`shebang '\\n\\n#! /bin/sh\\n\\n' => sh 2`] = `
"

"
`;

exports[`shebang '\\n\\n#! /usr/awk -f' => awk 1`] = `
Object {
  "argv": "-f",
  "bin": "/usr/awk",
  "script": "awk",
  "shebang": "

#! /usr/awk -f",
}
`;

exports[`shebang '\\n\\n#! /usr/awk -f' => awk 2`] = `""`;

exports[`shebang '\\n\\n#! /usr/awk -f\\n\\n' => awk 1`] = `
Object {
  "argv": "-f",
  "bin": "/usr/awk",
  "script": "awk",
  "shebang": "

#! /usr/awk -f",
}
`;

exports[`shebang '\\n\\n#! /usr/awk -f\\n\\n' => awk 2`] = `
"

"
`;

exports[`shebang '\\n\\n#! /usr/bin/env node' => node 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/env",
  "script": "node",
  "shebang": "

#! /usr/bin/env node",
}
`;

exports[`shebang '\\n\\n#! /usr/bin/env node' => node 2`] = `""`;

exports[`shebang '\\n\\n#! /usr/bin/env node\\n\\n' => node 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/env",
  "script": "node",
  "shebang": "

#! /usr/bin/env node",
}
`;

exports[`shebang '\\n\\n#! /usr/bin/env node\\n\\n' => node 2`] = `
"

"
`;

exports[`shebang '\\n\\n#! /usr/bin/env python -c' => python 1`] = `
Object {
  "argv": "-c",
  "bin": "/usr/bin/env",
  "script": "python",
  "shebang": "

#! /usr/bin/env python -c",
}
`;

exports[`shebang '\\n\\n#! /usr/bin/env python -c' => python 2`] = `""`;

exports[`shebang '\\n\\n#! /usr/bin/env python -c\\n\\n' => python 1`] = `
Object {
  "argv": "-c",
  "bin": "/usr/bin/env",
  "script": "python",
  "shebang": "

#! /usr/bin/env python -c",
}
`;

exports[`shebang '\\n\\n#! /usr/bin/env python -c\\n\\n' => python 2`] = `
"

"
`;

exports[`shebang '\\n\\n#! /usr/bin/php' => php 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/php",
  "script": "php",
  "shebang": "

#! /usr/bin/php",
}
`;

exports[`shebang '\\n\\n#! /usr/bin/php' => php 2`] = `""`;

exports[`shebang '\\n\\n#! /usr/bin/php\\n\\n' => php 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/php",
  "script": "php",
  "shebang": "

#! /usr/bin/php",
}
`;

exports[`shebang '\\n\\n#! /usr/bin/php\\n\\n' => php 2`] = `
"

"
`;

exports[`shebang '\\n\\n#! /usr/bin/php5' => php5 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/php5",
  "script": "php5",
  "shebang": "

#! /usr/bin/php5",
}
`;

exports[`shebang '\\n\\n#! /usr/bin/php5' => php5 2`] = `""`;

exports[`shebang '\\n\\n#! /usr/bin/php5\\n\\n' => php5 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/php5",
  "script": "php5",
  "shebang": "

#! /usr/bin/php5",
}
`;

exports[`shebang '\\n\\n#! /usr/bin/php5\\n\\n' => php5 2`] = `
"

"
`;

exports[`shebang '\\n\\n#! /usr/bin/ruby' => ruby 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/ruby",
  "script": "ruby",
  "shebang": "

#! /usr/bin/ruby",
}
`;

exports[`shebang '\\n\\n#! /usr/bin/ruby' => ruby 2`] = `""`;

exports[`shebang '\\n\\n#! /usr/bin/ruby\\n\\n' => ruby 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/ruby",
  "script": "ruby",
  "shebang": "

#! /usr/bin/ruby",
}
`;

exports[`shebang '\\n\\n#! /usr/bin/ruby\\n\\n' => ruby 2`] = `
"

"
`;

exports[`shebang '\\n\\n#!/bin/sed -f' => sed 1`] = `
Object {
  "argv": "-f",
  "bin": "/bin/sed",
  "script": "sed",
  "shebang": "

#!/bin/sed -f",
}
`;

exports[`shebang '\\n\\n#!/bin/sed -f' => sed 2`] = `""`;

exports[`shebang '\\n\\n#!/bin/sed -f\\n\\n' => sed 1`] = `
Object {
  "argv": "-f",
  "bin": "/bin/sed",
  "script": "sed",
  "shebang": "

#!/bin/sed -f",
}
`;

exports[`shebang '\\n\\n#!/bin/sed -f\\n\\n' => sed 2`] = `
"

"
`;

exports[`shebang '\\n\\n#!/bin/sh' => sh 1`] = `
Object {
  "argv": "",
  "bin": "/bin/sh",
  "script": "sh",
  "shebang": "

#!/bin/sh",
}
`;

exports[`shebang '\\n\\n#!/bin/sh' => sh 2`] = `""`;

exports[`shebang '\\n\\n#!/bin/sh\\n\\n' => sh 1`] = `
Object {
  "argv": "",
  "bin": "/bin/sh",
  "script": "sh",
  "shebang": "

#!/bin/sh",
}
`;

exports[`shebang '\\n\\n#!/bin/sh\\n\\n' => sh 2`] = `
"

"
`;

exports[`shebang '\\n\\n#!/usr/awk -f' => awk 1`] = `
Object {
  "argv": "-f",
  "bin": "/usr/awk",
  "script": "awk",
  "shebang": "

#!/usr/awk -f",
}
`;

exports[`shebang '\\n\\n#!/usr/awk -f' => awk 2`] = `""`;

exports[`shebang '\\n\\n#!/usr/awk -f\\n\\n' => awk 1`] = `
Object {
  "argv": "-f",
  "bin": "/usr/awk",
  "script": "awk",
  "shebang": "

#!/usr/awk -f",
}
`;

exports[`shebang '\\n\\n#!/usr/awk -f\\n\\n' => awk 2`] = `
"

"
`;

exports[`shebang '\\n\\n#!/usr/bin/env node' => node 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/env",
  "script": "node",
  "shebang": "

#!/usr/bin/env node",
}
`;

exports[`shebang '\\n\\n#!/usr/bin/env node' => node 2`] = `""`;

exports[`shebang '\\n\\n#!/usr/bin/env node\\n\\n' => node 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/env",
  "script": "node",
  "shebang": "

#!/usr/bin/env node",
}
`;

exports[`shebang '\\n\\n#!/usr/bin/env node\\n\\n' => node 2`] = `
"

"
`;

exports[`shebang '\\n\\n#!/usr/bin/env python -c' => python 1`] = `
Object {
  "argv": "-c",
  "bin": "/usr/bin/env",
  "script": "python",
  "shebang": "

#!/usr/bin/env python -c",
}
`;

exports[`shebang '\\n\\n#!/usr/bin/env python -c' => python 2`] = `""`;

exports[`shebang '\\n\\n#!/usr/bin/env python -c\\n\\n' => python 1`] = `
Object {
  "argv": "-c",
  "bin": "/usr/bin/env",
  "script": "python",
  "shebang": "

#!/usr/bin/env python -c",
}
`;

exports[`shebang '\\n\\n#!/usr/bin/env python -c\\n\\n' => python 2`] = `
"

"
`;

exports[`shebang '\\n\\n#!/usr/bin/php' => php 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/php",
  "script": "php",
  "shebang": "

#!/usr/bin/php",
}
`;

exports[`shebang '\\n\\n#!/usr/bin/php' => php 2`] = `""`;

exports[`shebang '\\n\\n#!/usr/bin/php\\n\\n' => php 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/php",
  "script": "php",
  "shebang": "

#!/usr/bin/php",
}
`;

exports[`shebang '\\n\\n#!/usr/bin/php\\n\\n' => php 2`] = `
"

"
`;

exports[`shebang '\\n\\n#!/usr/bin/php5' => php5 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/php5",
  "script": "php5",
  "shebang": "

#!/usr/bin/php5",
}
`;

exports[`shebang '\\n\\n#!/usr/bin/php5' => php5 2`] = `""`;

exports[`shebang '\\n\\n#!/usr/bin/php5\\n\\n' => php5 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/php5",
  "script": "php5",
  "shebang": "

#!/usr/bin/php5",
}
`;

exports[`shebang '\\n\\n#!/usr/bin/php5\\n\\n' => php5 2`] = `
"

"
`;

exports[`shebang '\\n\\n#!/usr/bin/ruby' => ruby 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/ruby",
  "script": "ruby",
  "shebang": "

#!/usr/bin/ruby",
}
`;

exports[`shebang '\\n\\n#!/usr/bin/ruby' => ruby 2`] = `""`;

exports[`shebang '\\n\\n#!/usr/bin/ruby\\n\\n' => ruby 1`] = `
Object {
  "argv": "",
  "bin": "/usr/bin/ruby",
  "script": "ruby",
  "shebang": "

#!/usr/bin/ruby",
}
`;

exports[`shebang '\\n\\n#!/usr/bin/ruby\\n\\n' => ruby 2`] = `
"

"
`;
